logs/cir-cuda/ATAX_atax.hip.cpp.cir.log
COMMAND: /workspace/llvm-bin/clang-23 -fclangir --gcc-install-dir=/usr/lib/gcc/x86_64-linux-gnu/11 -x hip --hip-path=/opt/rocm-6.3.0 --offload-arch=gfx942 -D__AMDGCN_WAVEFRONT_SIZE=64 -I/root/polybenchGpu/CUDA/ATAX -std=c++17 -O0 -c /root/polybenchGpu/HIP/ATAX/atax.hip.cpp -I/root/polybenchGpu/HIP -I/root/polybenchGpu/HIP/ATAX -o /tmp/ATAX_atax.hip.cpp.cir.o

/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:75:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
   75 |         hipGetDeviceProperties(&deviceProp, GPU_DEVICE);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.3.0/include/hip/hip_runtime_api.h:91:32: note: expanded from macro 'hipGetDeviceProperties'
   91 | #define hipGetDeviceProperties hipGetDevicePropertiesR0600
      |                                ^
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:77:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
   77 |         hipSetDevice( GPU_DEVICE );
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:147:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  147 |         hipMalloc((void **)&A_gpu, sizeof(DATA_TYPE) * NX * NY);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:148:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  148 |         hipMalloc((void **)&x_gpu, sizeof(DATA_TYPE) * NY);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:149:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  149 |         hipMalloc((void **)&y_gpu, sizeof(DATA_TYPE) * NY);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:150:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  150 |         hipMalloc((void **)&tmp_gpu, sizeof(DATA_TYPE) * NX);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:152:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  152 |         hipMemcpy(A_gpu, A, sizeof(DATA_TYPE) * NX * NY, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:153:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  153 |         hipMemcpy(x_gpu, x, sizeof(DATA_TYPE) * NY, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:154:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  154 |         hipMemcpy(y_gpu, y, sizeof(DATA_TYPE) * NY, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:155:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  155 |         hipMemcpy(tmp_gpu, tmp, sizeof(DATA_TYPE) * NX, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:165:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  165 |         hipDeviceSynchronize();
      |         ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:167:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  167 |         hipDeviceSynchronize();
      |         ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:174:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  174 |         hipMemcpy(y_outputFromGpu, y_gpu, sizeof(DATA_TYPE) * NX, hipMemcpyDeviceToHost);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:176:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  176 |         hipFree(A_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:177:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  177 |         hipFree(x_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:178:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  178 |         hipFree(y_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/ATAX/atax.hip.cpp:179:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  179 |         hipFree(tmp_gpu);
      |         ^~~~~~~~~~~~~~~~
loc("/opt/rocm-6.3.0/include/hip/amd_detail/hip_assert.h":70:3): error: 'cir.cast' op result type address space does not match the address space of the operand
fatal error: CIR module verification error before running CIR-to-CIR passes
clang-23: error: clang frontend command failed with exit code 70 (use -v to see invocation)
clang version 23.0.0git (git@github.com:llvm/llvm-project.git f30c3bb2647d4385c9d2035b9a661ecc0bcca813)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /workspace/llvm-bin
Build config: +assertions
clang-23: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang-23: note: diagnostic msg: /tmp/atax-gfx942-a1cc9e.hip
clang-23: note: diagnostic msg: /tmp/atax-e4dd1b.hip
clang-23: note: diagnostic msg: /tmp/atax-gfx942-a1cc9e.sh
clang-23: note: diagnostic msg: 

********************
